fixed message delete overflow

--- a/react-app/src/components/HomePage/HomePage.css
+++ b/react-app/src/components/HomePage/HomePage.css
@@ -1450,6 +1450,7 @@ box-shadow: rgba(30,31,34,.6) 0px 0px 0px 1px;
 box-shadow: rgba(0, 0, 0, .2) 0px 2px 10px 0px;
 padding-top: 20px;
 padding-bottom: 20px;
+
 }
 
 
@@ -1464,6 +1465,15 @@ padding-bottom: 20px;
 font-size: 13px;
 margin-top: 4px;
 
+text-overflow: ellipse;
+white-space: wrap;
+overflow-y: auto;
+overflow-x: hidden;
+padding: 10px;
+overflow-wrap: break-word;
+max-height: 200px;
+
+
 }
 
 .delete-button-cancel {
@@ -1475,7 +1485,7 @@ margin-top: 4px;
   margin-top: 20px;
   border: none;
   cursor: pointer;
-  border-radius: '2px';
+  border-radius: 2px;
 }
 
 .delete-button-cancel:hover {
@@ -1487,7 +1497,7 @@ margin-top: 4px;
   margin-top: 20px;
   border: none;
   cursor: pointer;
-  border-radius: '2px';
+  border-radius: 2px;
 }
 
 .delete-button-delete {
